--- a/public/assignment/widgets/templates/widget-youtube.view.client.html
+++ b/public/assignment/widgets/templates/widget-youtube.view.client.html
@@ -1,75 +1,70 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Widget Youtube</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          rel="stylesheet"/>
-    <link href="../../css/styles.css"
-          rel="stylesheet"/>
-</head>
-<body class="piy piy-body">
-    <div class="piy piy-widgetyoutube">
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
-                <div class="navbar-text pull-left">
-                    <a href="widget-list.view.client.html" class="piy-glyphicon">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                    </a>
-                </div>
-                <div class="navbar-text pull-right">
-                    <a href="widget-list.view.client.html" class="piy-glyphicon">
-                        <span class="glyphicon glyphicon-ok"></span>
-                    </a>
-                </div>
-                <div class="navbar-header">
-                    <a class="navbar-brand">Widget Edit</a>
-                </div>
+<div class="piy piy-body piy-widgetyoutube">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-text pull-left">
+                <a href="#!/user/{{model.userId}}/website/{{model.wid}}/page/{{model.pid}}/widget" class="piy-glyphicon">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
             </div>
-        </nav>
+            <div class="navbar-text pull-right">
+                <a ng-click="model.updateWidget(model.widget)" class="piy-glyphicon">
+                    <span class="glyphicon glyphicon-ok"></span>
+                </a>
+            </div>
+            <div class="navbar-header">
+                <a class="navbar-brand">Widget Edit</a>
+            </div>
+        </div>
+    </nav>
 
-        <div class="container-fluid piy-split-view">
-            <label for="name">Name</label>
-            <input name="name"
-                   class="form-control"
-                   placeholder="Name"
-                   id="name"/>
+    <div class="container-fluid piy-split-view">
 
-            <label for="text">Text</label>
-            <textarea name="text"
-                      rows="3"
-                      class="form-control"
-                      placeholder="Text"
-                      id="text"></textarea>
-
-            <label for="url">URL</label>
-            <input name="url"
-                   class="form-control"
-                   placeholder="URL"
-                   value="https://youtu.be/uLWLashCXHE"
-                   id="url"/>
-
-            <label for="width">Width</label>
-            <input name="width"
-                   class="form-control"
-                   placeholder="100%"
-                   id="width"/>
-
-            <a class="btn btn-default btn-danger btn-block"
-               href="widget-list.view.client.html"
-               role="button">Delete</a>
+        <div ng-show="model.errorMessage" class="alert alert-danger">
+            {{model.errorMessage}}
         </div>
 
-        <nav class="navbar navbar-default navbar-fixed-bottom">
-            <div class="container-fluid">
-                <div class="navbar-text pull-right">
-                    <a href="../../index.html" class="piy-glyphicon">
-                        <span class="glyphicon glyphicon-home"></span>
-                    </a>
-                </div>
-            </div>
-        </nav>
+        <label for="name">Name</label>
+        <input name="name"
+               ng-model="model.widget.name"
+               class="form-control"
+               placeholder="Name"
+               id="name"/>
+
+        <label for="text">Text</label>
+        <textarea name="text"
+                  ng-model="model.widget.text"
+                  rows="3"
+                  class="form-control"
+                  placeholder="Text"
+                  id="text"></textarea>
+
+        <label for="url">URL</label>
+        <input name="url"
+               ng-model="model.widget.url"
+               class="form-control"
+               placeholder="URL"
+               value="https://youtu.be/uLWLashCXHE"
+               id="url"/>
+
+        <label for="width">Width</label>
+        <input name="width"
+               ng-model="model.widget.width"
+               class="form-control"
+               placeholder="100%"
+               id="width"/>
+
+        <a class="btn btn-default btn-danger btn-block"
+           ng-click="model.deleteWidget(model.widget)"
+           role="button">Delete</a>
     </div>
-</body>
-</html>
+
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container-fluid">
+            <div class="navbar-text pull-right">
+                <a href="#!/profile/{{model.userId}}" class="piy-glyphicon">
+                    <span class="glyphicon glyphicon-home"></span>
+                </a>
+            </div>
+        </div>
+    </nav>
+</div>
