Assignment 3 Sixth Commit

--- a/public/assignment/views/widgets/templates/widget-choose.view.client.html
+++ b/public/assignment/views/widgets/templates/widget-choose.view.client.html
@@ -130,7 +130,7 @@
         <div class="container-fluid">
             <div class="navbar-text pull-right">
                 <a href="#!/profile/{{model.userId}}" class="piy-glyphicon">
-                    <span class="glyphicon glyphicon-home"></span>
+                    <span class="glyphicon glyphicon-user"></span>
                 </a>
             </div>
         </div>
