--- a/public/assignment/views/widgets/templates/widget-list.view.client.html
+++ b/public/assignment/views/widgets/templates/widget-list.view.client.html
@@ -57,7 +57,7 @@
                             col-sm-10 col-sm-offset-1
                             col-md-8 col-md-offset-2
                             col-lg-6 col-lg-offset-3">
-                            <img src="{{widget.url}}"
+                            <img ng-src="{{widget.url}}"
                                  width="{{widget.width}}"
                                  class="img-responsive piy-margin-bottom piy-image"
                                  alt="Responsive image">
@@ -77,7 +77,7 @@
                             col-md-8 col-md-offset-2
                             col-lg-6 col-lg-offset-3
                             video-container piy-margin-bottom">
-                            <iframe src="https://www.youtube.com/embed/uLWLashCXHE"
+                            <iframe src="{{model.trustUrl(widget.url)}}"
                                     width="{{widget.width}}"
                                     frameborder="0"
                                     allowfullscreen
@@ -93,8 +93,8 @@
                 </div>
                 <div ng-switch-when="HTML">
                     <div class="row">
-                        <div class="col-xs-12 piy-margin-bottom piy-paragraph">
-                            {{widget.text}}
+                        <div ng-bind-html="model.trustHtmlContent(widget.text)"
+                             class="col-xs-12 piy-margin-bottom piy-paragraph">
                         </div>
                         <div class="col-xs-12 piy-glyphicon-split">
                             <a>
