--- a/public/assignment/views/users/templates/register.view.client.html
+++ b/public/assignment/views/users/templates/register.view.client.html
@@ -26,7 +26,7 @@
            id="verifypassword"/>
 
     <a class="btn btn-default btn-primary btn-block"
-       ng-click="model.registerUser(user)"
+       ng-click="model.createUser(user)"
        role="button">Register</a>
 
     <a class="btn btn-default btn-danger btn-block"
