Assignment 3 Seventh commit

--- a/public/assignment/views/users/templates/profile.view.client.html
+++ b/public/assignment/views/users/templates/profile.view.client.html
@@ -51,7 +51,7 @@
            role="button">Logout</a>
 
         <a class="btn btn-default btn-danger btn-block"
-           ng-click="model.unregister(model.user)"
+           ng-click="model.deleteUser(model.user)"
            role="button">Unregister</a>
     </div>
 
