Assignment 3 Eight commit

--- a/public/assignment/views/websites/templates/website-new.view.client.html
+++ b/public/assignment/views/websites/templates/website-new.view.client.html
@@ -19,7 +19,7 @@
                         </a>
                     </div>
                     <div class="navbar-text pull-right">
-                        <a ng-click="model.addNewWebsite(model.website)" class="piy-glyphicon">
+                        <a ng-click="model.createWebsite(model.website)" class="piy-glyphicon">
                             <span class="glyphicon glyphicon-ok"></span>
                         </a>
                     </div>
