--- a/public/assignment/views/users/templates/register.view.client.html
+++ b/public/assignment/views/users/templates/register.view.client.html
@@ -6,27 +6,27 @@
     </div>
 
     <input name="username"
-           ng-model="user.username"
+           ng-model="model.user.username"
            class="form-control"
            placeholder="Username"
            id="username"/>
 
     <input name="password"
-           ng-model="user.password"
+           ng-model="model.user.password"
            type="password"
            class="form-control"
            placeholder="Password"
            id="password"/>
 
     <input name="verifypassword"
-           ng-model="user.password2"
+           ng-model="model.user.password2"
            type="password"
            class="form-control"
            placeholder="Verify Password"
            id="verifypassword"/>
 
     <a class="btn btn-default btn-primary btn-block"
-       ng-click="model.createUser(user)"
+       ng-click="model.createUser(model.user)"
        role="button">Register</a>
 
     <a class="btn btn-default btn-danger btn-block"
